# AllDemos

./: README.md
AI/: tf_readme.md
AI/CP_POC/: Setup.md
AI/tensorflow_trains/: callbacks.py  cv.py  fashion_mnist.py  hellotf.py  requirements.txt
AI/tensorflow_trains/cnn_basic_l4/: cnn_model.py
AI/tensorflow_trains/cnn_horse_human_l5/: design_model.py  horse_human_data.py  load_data.py  main.py  test.py
AI/tensorflow_trains/conv_pooling_l3/: convolution.py  maxpooling.py
clang/: readme.txt
clang/demo1/: CMakeLists.txt  main.cpp
clang/libOne/: CMakeLists.txt
clang/libOne/include/: test1.h
clang/libOne/src/: test1.cpp
clang/libTwo/: CMakeLists.txt  main.cpp
clang/libTwo/include/: test2.h
clang/libTwo/src/: test2.cpp
graphqlapi/: package-lock.json  package.json  readme.md  schema.js  schema2.js  server.js
ios/: readme.txt
ios/demo1/demo1.xcodeproj/: project.pbxproj
koa_graphql/: package-lock.json  package.json  readme.md  server.js  start.js
koa_graphql/config/: index.js
koa_graphql/controllers/: list.js
koa_graphql/mongodb/: index.js
koa_graphql/public/: index-s2.js  index.html  index.js
python/demo1/: AI.py  AI_pandas.py  basictype.py  demo.py  sequence_type.py  test_conditions.py
python/py_100days/: Untitled.ipynb
reactnative/: readme.txt
reactnative/demo1/: Readme.md  package.json
reactnative/myIgnite/: README.md  index.js  package-lock.json  package.json
reactnative/myIgnite1/: app.json  package-lock.json
shell/: demo.sh
shell/forjob/: collect_B1_image.sh  conversion_build.sh  gitsync.sh
(+33 files in other folders)
