PROJECT(TEST1)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# SET(TEST_SUBDIR ${CMAKE_CURRENT_SOURCE_DIR})
# SET(SOURCE $(wildcard ./*cpp $(TEST_SUBDIR)*.cpp))
# AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SUBDIR)
# ADD_EXECUTABLE(TEST1 ${SUBDIR}})
add_library(${PROJECT_NAME}_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/test1.cpp)
# ADD_EXECUTABLE(TEST1 ./main.cpp)
# target_link_libraries(TEST1 ${PROJECT_NAME}_lib)